Made changes to spacing between title and carousel-indicators as per latest discussion in issue #105

--- a/website/static/website/css/styles.css
+++ b/website/static/website/css/styles.css
@@ -213,7 +213,7 @@ h5 {
 	bottom: 0;
 	color: #fff;
 	text-shadow: 0 1px 2px rgba(0,0,0,.6);
-	margin-bottom: 5px;
+	margin-bottom: 12px;
     }
 }
 
@@ -232,7 +232,7 @@ h5 {
 	bottom: 0;
 	color: #fff;
 	text-shadow: 0 1px 2px rgba(0,0,0,.6);
-	margin-bottom: 5px;
+	margin-bottom: 12px;
     }    
 }
 
@@ -281,7 +281,7 @@ h5 {
 }
 
 .carousel-indicators {
-    margin-bottom: -10px;
+    margin-bottom: -7px;
 }
 
 /* Custom 5-column styles
